# sycon-api

./: .gitignore  LICENSE  README.md  api-changelog.md  package-lock.json  package.json
.github/workflows/: ci_api_lib.yml
docs/: guide.md  index.html  openapi.json
examples/curl/: quickstart.sh
examples/js/: quickstart.js
examples/python/: quickstart.py
libs/SyconApi/: README.md  pyproject.toml  pytest.ini  run_tests.sh
libs/SyconApi/src/sycon_api/: __init__.py  sycon_api.py
libs/SyconApi/tests/: sycon_api_test.py
openapi/: sycon-cloud-api.json
