[build-system]
requires = ["setuptools>=69.5.1", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "SyconApi"
version = "0.2.0rc1"
description = "Sycon python api to users"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "Sycon", email = "dev@sycon.fr" } ]
dependencies = [
  "requests>=2.32,<3.0",
  "tenacity>=9.0.0,<10.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sycon_api"]
